<resources>
    <string name="app_name">Mancala</string>
    <string name="logo">logo</string>
    <string name="info">info vector image</string>
    <string name="stats">stats vector image</string>
    <string name="welcome">Welcome to Mancala!</string>
    <string name="begin_multiplayer">Begin Multiplayer Game</string>
    <string name="dashboard_multiplayer_button">Begin</string>
    <string name="begin_single_player">Begin Single Player Game</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="board_button_text">MOVE STONES</string>
    <string name="board_button_description">stones in pocket</string>
    <string name="stones">%d</string>
    <string name="tie">The game ended in a tie.</string>
    <string name="tie_score">The final score was 24 – 24</string>
    <string name="congratulations">Congratulations!</string>
    <string name="better_luck">Better luck next time…</string>
    <string name="you_won">You beat MancalaBot!\nThe final score was %d – %d</string>
    <string name="mancalabot_won">MancalaBot won.\nThe final score was %d – %d</string>
    <string name="winner">%s is the winner!\nThe final score was %d – %d</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play again</string>
    <string name="pocket_wrong_side_snackbar">Please choose a pocket on the correct side of the board.</string>
    <string name="pocket_empty_snackbar">Pocket is empty. Please choose another pocket.</string>
    <string name="move_again_snackbar">Last stone was placed in your store. Move again!</string>
    <string name="dismiss">DISMISS</string>
    <string name="lets_play">Let\'s Play!</string>
    <string name="stats_title">Mancala Statistics</string>
    <string name="total_games_played">Total games played: %d</string>
    <string name="single_player_games_played">Single player games played: %d</string>
    <string name="multiplayer_games_played">Multiplayer games played: %d</string>
    <string name="easy_games_won">Easy difficulty: %d/%d (%.1f%%)</string>
    <string name="intermediate_games_won">Intermediate difficulty: %d/%d (%.1f%%)</string>
    <string name="hard_games_won">Hard difficulty: %d/%d (%.1f%%)</string>
</resources>